# cardiovascular-ai

./: .gitignore  LICENSE  README.md  download_dataset.py  pyproject.toml  requirements.txt
notebook/: ECG-FM.ipynb  IML_Net.ipynb  PTBXL.ipynb  ecg-digitizer-class.ipynb  ecg-digitizer.ipynb  ptbxl_fairseq_preprocessing.ipynb  visualize_ecgqa.ipynb
src/data/: __init__.py  digitizer.py
src/data/ptbxl/: __init__.py  enums.py  loader.py  record.py  utils.py
src/data/ptbxl/types/: record.pyi
src/model/IMLE_net/: __init__.py  inference.py
src/model/IMLE_net/configs/: imle_config.py
src/model/IMLE_net/preprocessing/: preprocess.py  sub_preprocess.py
src/model/IMLE_net/utils/: callbacks.py
src/model/huggingface/: utils.py
src/model/weight/: utils.py
src/notebook/: main.ipynb
src/utils/: __init__.py  display.py  evaluation.py
