[tool.poetry]
name = "cardiovascular-ai"
version = "0.1.0"
description = ""
authors = ["Ny Avo <johanesanyavo@gmail.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
numpy = "^2.2.3"
wfdb = "^4.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipynbname = "^2024.1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
